refactor: refactor SchedulingService so it can be more concise